--- a/Titanic1.ipynb
+++ b/Titanic1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQr5/ArIRQsWKJt7oyKEgo",
+      "authorship_tag": "ABX9TyNnCezYZgj4vGGeRibI8uEJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 16,
       "metadata": {
         "id": "8iD7aoifCaL-"
       },
@@ -37,7 +37,9 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression"
       ]
     },
     {
@@ -62,7 +64,7 @@
           "height": 527
         },
         "id": "Vrle9kXODORt",
-        "outputId": "4cc7142e-88c6-4090-b286-c419c037dc5e"
+        "outputId": "7d647d33-ae08-4127-a937-c19c9a8228b7"
       },
       "execution_count": 3,
       "outputs": [
@@ -113,7 +115,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-455c254a-0887-4b3b-b03c-574e342ad927\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-33907230-51b3-414f-9390-4d0409e7c08e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -319,7 +321,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-455c254a-0887-4b3b-b03c-574e342ad927')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-33907230-51b3-414f-9390-4d0409e7c08e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -371,12 +373,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-455c254a-0887-4b3b-b03c-574e342ad927 button.colab-df-convert');\n",
+              "        document.querySelector('#df-33907230-51b3-414f-9390-4d0409e7c08e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-455c254a-0887-4b3b-b03c-574e342ad927');\n",
+              "        const element = document.querySelector('#df-33907230-51b3-414f-9390-4d0409e7c08e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -396,8 +398,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-8025e29d-ee7f-43b6-a2c6-7096f10b8625\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8025e29d-ee7f-43b6-a2c6-7096f10b8625')\"\n",
+              "<div id=\"df-0c721fa6-f61f-4b36-81cc-065e3cd80f9f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0c721fa6-f61f-4b36-81cc-065e3cd80f9f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -516,7 +518,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-8025e29d-ee7f-43b6-a2c6-7096f10b8625 button');\n",
+              "        document.querySelector('#df-0c721fa6-f61f-4b36-81cc-065e3cd80f9f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -546,7 +548,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cpLqVfPcDTW4",
-        "outputId": "1769733f-b00d-4939-c53b-ccd807663340"
+        "outputId": "59867009-50fa-4f43-9c29-2496777c1cb1"
       },
       "execution_count": 4,
       "outputs": [
@@ -584,7 +586,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EfiLSrVIDZLu",
-        "outputId": "4aaa30f0-4311-4daf-8641-057beafc3194"
+        "outputId": "4ca051fb-dc75-477a-ab3c-1f4734d5dab9"
       },
       "execution_count": 5,
       "outputs": [
@@ -622,7 +624,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T8p2Knb-DdWI",
-        "outputId": "f2a9458b-6b0c-4cef-eace-934fe634d0bf"
+        "outputId": "5138e7ca-983f-4b4b-d649-5fbb47b02c26"
       },
       "execution_count": 6,
       "outputs": [
@@ -665,7 +667,7 @@
           "height": 466
         },
         "id": "UQtH-VAIDfRZ",
-        "outputId": "1bb343a7-e2ca-45be-f114-41e96b0fc53d"
+        "outputId": "b7f21ba3-50f8-46e0-d498-44b6a910acc7"
       },
       "execution_count": 7,
       "outputs": [
@@ -714,7 +716,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4892eeca-145d-4fe5-892a-97826bf26904\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2f038658-3f2e-4724-a44f-08115b6d4aea\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -919,7 +921,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4892eeca-145d-4fe5-892a-97826bf26904')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2f038658-3f2e-4724-a44f-08115b6d4aea')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -971,12 +973,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4892eeca-145d-4fe5-892a-97826bf26904 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2f038658-3f2e-4724-a44f-08115b6d4aea button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4892eeca-145d-4fe5-892a-97826bf26904');\n",
+              "        const element = document.querySelector('#df-2f038658-3f2e-4724-a44f-08115b6d4aea');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -996,8 +998,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-45ea675f-c59a-4a96-9688-60c14a728bc0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-45ea675f-c59a-4a96-9688-60c14a728bc0')\"\n",
+              "<div id=\"df-96c549c9-c160-4f12-ae95-3811eb72502f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-96c549c9-c160-4f12-ae95-3811eb72502f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1116,14 +1118,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-45ea675f-c59a-4a96-9688-60c14a728bc0 button');\n",
+              "        document.querySelector('#df-96c549c9-c160-4f12-ae95-3811eb72502f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_eaf47764-b0fc-4f15-a439-29ddfce86df6\">\n",
+              "  <div id=\"id_137b94ea-4f6d-496d-94fe-c50515b1c0d2\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1167,7 +1169,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_eaf47764-b0fc-4f15-a439-29ddfce86df6 button.colab-df-generate');\n",
+              "        document.querySelector('#id_137b94ea-4f6d-496d-94fe-c50515b1c0d2 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1215,7 +1217,7 @@
           "height": 493
         },
         "id": "Eez4mjBIE2SB",
-        "outputId": "79a8e411-36b2-4ef8-c101-2a334098cf3b"
+        "outputId": "4139de08-d8f6-4008-fa6d-ca437ecc94b2"
       },
       "execution_count": 9,
       "outputs": [
@@ -1266,7 +1268,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a9458703-276f-481d-ba16-22001a75f939\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-fafadbdf-d337-4f6a-9605-e2e27c52f0ce\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1460,7 +1462,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9458703-276f-481d-ba16-22001a75f939')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fafadbdf-d337-4f6a-9605-e2e27c52f0ce')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1512,12 +1514,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a9458703-276f-481d-ba16-22001a75f939 button.colab-df-convert');\n",
+              "        document.querySelector('#df-fafadbdf-d337-4f6a-9605-e2e27c52f0ce button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a9458703-276f-481d-ba16-22001a75f939');\n",
+              "        const element = document.querySelector('#df-fafadbdf-d337-4f6a-9605-e2e27c52f0ce');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1537,8 +1539,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-892b3e2a-8ad3-4c16-a409-e294006ca9cd\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-892b3e2a-8ad3-4c16-a409-e294006ca9cd')\"\n",
+              "<div id=\"df-ebb7ade4-a53b-4d42-b6ab-96d3b5919137\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ebb7ade4-a53b-4d42-b6ab-96d3b5919137')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1657,7 +1659,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-892b3e2a-8ad3-4c16-a409-e294006ca9cd button');\n",
+              "        document.querySelector('#df-ebb7ade4-a53b-4d42-b6ab-96d3b5919137 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1688,7 +1690,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gUcf3CTDFVwU",
-        "outputId": "a6b57697-eed3-4ddc-d9f2-60a0157bca3e"
+        "outputId": "413c5983-1855-4f6a-924c-7f1640b0a4c2"
       },
       "execution_count": 10,
       "outputs": [
@@ -2392,7 +2394,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z4HvQ4jsHAx7",
-        "outputId": "635d4a28-3f27-4d42-8951-a543e38763f9"
+        "outputId": "57111e15-7b12-478b-dcf7-3a3bd5193da7"
       },
       "execution_count": 11,
       "outputs": [
@@ -2425,7 +2427,7 @@
           "height": 437
         },
         "id": "FJ5b2gaPUraV",
-        "outputId": "45880d78-a245-4127-9fef-265924fed77e"
+        "outputId": "617bed55-e9b9-4515-e9b3-a1b881260ee7"
       },
       "execution_count": 12,
       "outputs": [
@@ -2441,7 +2443,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bb10af40-fc09-47c7-92d1-9c36fc481115\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2a69d9c4-f199-4483-aeb7-4427ffffe0f5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2519,7 +2521,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bb10af40-fc09-47c7-92d1-9c36fc481115')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2a69d9c4-f199-4483-aeb7-4427ffffe0f5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2571,12 +2573,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bb10af40-fc09-47c7-92d1-9c36fc481115 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2a69d9c4-f199-4483-aeb7-4427ffffe0f5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bb10af40-fc09-47c7-92d1-9c36fc481115');\n",
+              "        const element = document.querySelector('#df-2a69d9c4-f199-4483-aeb7-4427ffffe0f5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2596,8 +2598,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-057039d3-0263-44ea-9b61-64f51c413f2d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-057039d3-0263-44ea-9b61-64f51c413f2d')\"\n",
+              "<div id=\"df-6be53a0b-784f-477c-9b51-87d54744232a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6be53a0b-784f-477c-9b51-87d54744232a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2716,14 +2718,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-057039d3-0263-44ea-9b61-64f51c413f2d button');\n",
+              "        document.querySelector('#df-6be53a0b-784f-477c-9b51-87d54744232a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_52ff80a7-d139-4f1b-8300-79069da7b616\">\n",
+              "  <div id=\"id_ddc64867-c0eb-4e57-9ab2-43d4f677e57c\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -2767,7 +2769,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_52ff80a7-d139-4f1b-8300-79069da7b616 button.colab-df-generate');\n",
+              "        document.querySelector('#id_ddc64867-c0eb-4e57-9ab2-43d4f677e57c button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -2795,6 +2797,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#analysis to get the survival of people in the titanic\n",
         "count=[100,200,300,400,500,600,700,800,900]\n",
         "sns.distplot(mod_train['Survived'],count,label='Survival')\n",
         "plt.legend()\n",
@@ -2806,19 +2809,19 @@
       ],
       "metadata": {
         "id": "AkMpcLcxVshX",
-        "outputId": "be9361cf-6061-4298-9cc4-781e4257b501",
+        "outputId": "6d84f3c3-5f31-4b2b-d4f4-9656c5c882ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 707
         }
       },
-      "execution_count": 24,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-24-33116eeabada>:2: UserWarning: \n",
+            "<ipython-input-13-33116eeabada>:2: UserWarning: \n",
             "\n",
             "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
             "\n",
@@ -2847,11 +2850,39 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "x=mod_train['Passenger ID']\n",
+        "y=mod_train['Survived']\n",
+        "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2,random_state=20,stratify=y)"
+      ],
+      "metadata": {
+        "id": "boDFRzCcWXEf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3d886232-3327-4159-d673-a4edb5ff7228"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(712,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "boDFRzCcWXEf"
+        "id": "yx2vp-fCulk5"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     }
   ]
